--- a/stage2_config.yaml
+++ b/stage2_config.yaml
@@ -30,12 +30,12 @@ DATASETS:
 
 # Stage 2 Solver: Fine-tuning settings for manual annotations
 SOLVER:
-  IMS_PER_BATCH: 1  # Single image batch for 1500x1500 high-resolution fine-tuning
-  BASE_LR: 0.00008  # Slightly lower LR for high-res dense structures
-  MAX_ITER: 1500    # More iterations for complex dense manual annotations
-  STEPS: (1000, 1300) # LR drops at 67% and 87%
+  IMS_PER_BATCH: 1  # Single image batch (already optimized for memory)
+  BASE_LR: 0.00006  # Reduced LR for single-image fine-tuning
+  MAX_ITER: 2000    # More iterations for small batch fine-tuning
+  STEPS: (1400, 1800) # LR drops at 70% and 90%
   WARMUP_FACTOR: 0.1
-  WARMUP_ITERS: 30  # Longer warmup for high-res manual data
+  WARMUP_ITERS: 50  # Extended warmup for single-image training
   WEIGHT_DECAY: 0.01  # Reduced weight decay for fine-tuning
   OPTIMIZER: "ADAMW"
   BACKBONE_MULTIPLIER: 0.03  # Very conservative backbone for precise tuning
