--- a/stage1_config.yaml
+++ b/stage1_config.yaml
@@ -21,7 +21,7 @@ MODEL:
   MASK_FORMER:
     TEST:
       OBJECT_MASK_THRESHOLD: 0.3  # Lower threshold for thin structures
-      OVERLAP_THRESHOLD: 0.2  # Strict separation - myotubes are distinct individuals
+      OVERLAP_THRESHOLD: 0.0  # Zero overlap - each myotube is completely distinct
 
 # Dataset configuration for Stage 1 (algorithmic annotations)
 DATASETS:
