--- a/stage2_panoptic_config.yaml
+++ b/stage2_panoptic_config.yaml
@@ -22,6 +22,9 @@ MODEL:
     TEST:
       OBJECT_MASK_THRESHOLD: 0.4  # Higher threshold for quality manual annotations
       OVERLAP_THRESHOLD: 0.0  # Zero overlap - each myotube is completely distinct
+      PANOPTIC_ON: True   # Enable panoptic evaluation
+      INSTANCE_ON: True   # Enable instance evaluation  
+      SEMANTIC_ON: False  # Disable semantic evaluation - we don't have sem_seg ground truth
 
 # Dataset configuration for Stage 2 (manual annotations)
 DATASETS:
