debug temp delete panoptic evaluation

--- a/stage1_panoptic_config.yaml
+++ b/stage1_panoptic_config.yaml
@@ -22,7 +22,7 @@ MODEL:
     TEST:
       OBJECT_MASK_THRESHOLD: 0.3  # Lower threshold for algorithmic annotations
       OVERLAP_THRESHOLD: 0.0  # Zero overlap - each myotube is completely distinct
-      PANOPTIC_ON: True   # Enable panoptic evaluation
+      PANOPTIC_ON: False  # Temporarily disable panoptic evaluation to debug
       INSTANCE_ON: True   # Enable instance evaluation  
       SEMANTIC_ON: False  # Disable semantic evaluation - we don't have sem_seg ground truth
 
