--- a/stage1_panoptic_config.yaml
+++ b/stage1_panoptic_config.yaml
@@ -22,6 +22,9 @@ MODEL:
     TEST:
       OBJECT_MASK_THRESHOLD: 0.3  # Lower threshold for algorithmic annotations
       OVERLAP_THRESHOLD: 0.0  # Zero overlap - each myotube is completely distinct
+      PANOPTIC_ON: True
+      INSTANCE_ON: True   # Enable instance evaluation  
+      SEMANTIC_ON: False  # Disable semantic evaluation - we don't have sem_seg ground truth
 
 # Dataset configuration for Stage 1 (algorithmic annotations)
 DATASETS:
@@ -69,7 +72,7 @@ INPUT:
 
 # Evaluation configuration
 TEST:
-  EVAL_PERIOD: 750  # Evaluation every 750 iterations (~125 epochs for 100 images)
+  EVAL_PERIOD: 100  # Evaluation every 750 iterations (~125 epochs for 100 images)
 
 # Data loader configuration  
 DATALOADER:
