--- a/stage2_panoptic_config.yaml
+++ b/stage2_panoptic_config.yaml
@@ -14,8 +14,8 @@ MODEL:
   WEIGHTS: ""  # Set by training script to stage1 panoptic checkpoint
   
   SEM_SEG_HEAD:
-    # Single class: myotube (+ background = 2 total classes for panoptic)
-    NUM_CLASSES: 2
+    # Single class: myotube (background is implicit, ID 0)
+    NUM_CLASSES: 1
   
   # Fine-tuned settings for precise manual annotations
   MASK_FORMER:
