--- a/stage1_panoptic_config.yaml
+++ b/stage1_panoptic_config.yaml
@@ -14,8 +14,8 @@ MODEL:
   WEIGHTS: "model_final_54b88a_panoptic.pkl"
   
   SEM_SEG_HEAD:
-    # Single class: myotube (background is implicit, ID 0)
-    NUM_CLASSES: 1
+    # Two classes: myotube (thing) + background (stuff)
+    NUM_CLASSES: 2
   
   # Optimize for dense overlapping structures
   MASK_FORMER:
