--- a/stage1_panoptic_config.yaml
+++ b/stage1_panoptic_config.yaml
@@ -10,6 +10,7 @@ MODEL:
   SEM_SEG_HEAD:
     # Two classes: myotube (thing) + background (stuff)
     NUM_CLASSES: 2
+    IGNORE_VALUE: 255  # Explicit ignore value for crop constraint
 
 # Optimize for dense overlapping structures
 MASK_FORMER:
@@ -35,24 +36,28 @@ SOLVER:
   WEIGHT_DECAY: 0.01        # Moderate regularization
   BACKBONE_MULTIPLIER: 0.2  # Faster backbone learning
   CLIP_GRADIENTS:
-    CLIP_VALUE: 0.1         # Higher clip value
+    ENABLED: True
+    CLIP_TYPE: "full_model"
+    CLIP_VALUE: 0.1         # Higher clip value for large crops
+    NORM_TYPE: 2.0
 
 # Input settings optimized for 9000×9000 myotube fluorescence images
+# NEW: CROP-FIRST-THEN-SCALE approach for maximum detail preservation
 INPUT:
-  # Use MaskFormer dataset mapper for better detail preservation
+  # Use MaskFormer dataset mapper with crop-first modification
   DATASET_MAPPER_NAME: "mask_former_panoptic"
   
-  # Multi-scale training with intelligent resizing
-  MIN_SIZE_TRAIN: [800, 900, 1000, 1100, 1200, 1300]  # Multi-scale for high-res images
-  MAX_SIZE_TRAIN: 1500      # Max dimension to preserve detail
-  MIN_SIZE_TRAIN_SAMPLING: "choice"  # Random choice each epoch
-  
-  # Crop settings for preserving myotube detail
+  # CROP FIRST: Extract regions from full 9000×9000 resolution
   CROP:
     ENABLED: True
     TYPE: "relative_range"
-    SIZE: [0.5, 1.0]       # Conservative crop range
-    SINGLE_CATEGORY_MAX_AREA: 1.0
+    SIZE: [0.4, 1.0]       # 1800×1800 to 9000×9000 crops - HUGE scale diversity!
+    SINGLE_CATEGORY_MAX_AREA: 0.9  # Allow myotubes to fill crop area
+  
+  # THEN SCALE: Multi-scale training on the cropped regions
+  MIN_SIZE_TRAIN: [800, 900, 1000, 1100, 1200, 1300]  # Multi-scale for cropped regions
+  MAX_SIZE_TRAIN: 1500      # Max dimension after scaling
+  MIN_SIZE_TRAIN_SAMPLING: "choice"  # Random choice each epoch
   
   # Data augmentation optimized for fluorescence images
   COLOR_AUG_SSD: True      # Enable for better generalization of fluorescence intensity
