--- a/stage1_panoptic_config.yaml
+++ b/stage1_panoptic_config.yaml
@@ -12,14 +12,14 @@ MODEL:
     NUM_CLASSES: 2
     IGNORE_VALUE: 255  # Explicit ignore value for crop constraint
 
-# Optimize for dense overlapping structures
-MASK_FORMER:
-  TEST:
-    OBJECT_MASK_THRESHOLD: 0.3  # Lower threshold for algorithmic annotations
-    OVERLAP_THRESHOLD: 0.0  # Zero overlap - each myotube is completely distinct
-    PANOPTIC_ON: True
-    INSTANCE_ON: False  # Disable instance evaluation for panoptic training
-    SEMANTIC_ON: False  # Disable semantic evaluation - we don't have sem_seg ground truth
+  # Optimize for dense overlapping myotube structures
+  MASK_FORMER:
+    TEST:
+      OBJECT_MASK_THRESHOLD: 0.3  # Lower threshold for algorithmic annotations
+      OVERLAP_THRESHOLD: 0.0  # Zero overlap - each myotube is completely distinct
+      PANOPTIC_ON: True
+      INSTANCE_ON: False  # Disable instance evaluation for panoptic training
+      SEMANTIC_ON: False  # Disable semantic evaluation - we don't have sem_seg ground truth
 
 # Dataset configuration for Stage 1 (algorithmic annotations)
 DATASETS:
